# epiccash

./: .gitignore  .metadata  README.md  cargokit_options.yaml  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/epiccash_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: epiccash.podspec
ios/Classes/: epiccash.c
lib/: epiccash.dart  epiccash.g.dart  epiccash_bindings_generated.dart
linux/: CMakeLists.txt
macos/: epiccash.podspec
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
src/: CMakeLists.txt  epiccash.c
tool/: ffigen.dart
windows/: CMakeLists.txt
